rnsc/test_data/integration/error/parser/type_hints/string/no_operand.rns
.class   @string ; no operand provided
.super java/lang/Object